# pattern_causality_py

./: LICENCE  MANIFEST.in  README.md  meta.yaml  pattern_causality.py  pyproject.toml  requirements.txt  setup.py
.github/workflows/: lint.yml  tests.yml
pattern_causality/: __init__.py  datasets.py  distancematrix.cpp  fillPCMatrix.cpp  natureOfCausality.cpp  pastNNs.cpp  pattern_causality.py  patternhashing.cpp  patternspace.cpp  predictionY.cpp  projectedNNs.cpp  signaturespace.cpp  statespace.cpp
pattern_causality.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
pattern_causality/cpp/: __init__.py  databank.cpp  fcp.cpp  pastNNs.cpp  predictionY.cpp  projectedNNs.cpp  signaturespace.cpp
pattern_causality/data/: Climate_Indices.csv
src/pattern_causality/: __init__.py  pattern_causality.py
src/pattern_causality_py/: __init__.py
tests/: test_advanced.py  test_basic.py  test_utils.py
