[build-system]
requires = [
    "setuptools>=45",
    "wheel",
    "numpy>=1.19.0",
]
build-backend = "setuptools.build_meta"

[project]
name = "pattern_causality"
version = "0.0.2"
description = "Pattern Causality Algorithm in Python"
readme = "README.md"
requires-python = ">=3.2"
license = {text = "BSD License"}
authors = [
    {name = "Stavros Stavroglou", email = "stavros.k.stavroglou@gmail.com"},
    {name = "Athanasios Pantelous", email = "Athanasios.Pantelous@monash.edu"},
    {name = "Hui Wang", email = "huiw1128@gmail.com"},
]
maintainers = [
    {name = "Hui Wang", email = "huiw1128@gmail.com"},
]
dependencies = [
    "numpy",
    "pandas",
]

[project.urls]
Homepage = "https://github.com/wanghui5801/pattern_causality_py"
Repository = "https://github.com/wanghui5801/pattern_causality_py.git"
Documentation = "https://github.com/wanghui5801/pattern_causality_py#readme"

[tool.setuptools]
packages = ["pattern_causality"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --cov=pattern_causality"

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-cov>=2.0",
    "black>=22.0",
    "isort>=5.0",
    "flake8>=4.0",
]