[build-system]
requires = [
    "setuptools>=45",
    "wheel",
    "numpy>=1.19.0",
]
build-backend = "setuptools.build_meta"

[project]
name = "pattern-causality"
version = "0.0.3"
description = "Pattern Causality Algorithm in Python"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "BSD License"}
authors = [
    {name = "Stavros Stavroglou", email = "stavros.k.stavroglou@gmail.com"},
    {name = "Athanasios Pantelous", email = "Athanasios.Pantelous@monash.edu"},
    {name = "Hui Wang", email = "huiw1128@gmail.com"},
]
maintainers = [
    {name = "Hui Wang", email = "huiw1128@gmail.com"},
]
dependencies = [
    "numpy>=1.19.0",
    "pandas>=1.0.0",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
[project.urls]
Homepage = "https://github.com/skstavroglou/pattern_causality_py"
Repository = "https://github.com/skstavroglou/pattern_causality_py.git"
Documentation = "https://github.com/skstavroglou/pattern_causality_py#readme"

[tool.setuptools]
packages = ["pattern_causality"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --cov=pattern_causality"

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-cov>=2.0",
    "black>=22.0",
    "isort>=5.0",
    "flake8>=4.0",
]

[tool.black]
line-length = 88
target-version = ['py38']
extend-exclude = '''
# A regex preceded with ^/ will apply only to files and directories
# in the root of the project.
^/pattern_causality/pattern_causality.py
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
skip = ["pattern_causality/pattern_causality.py"]

[tool.mypy]
python_version = "3.8"
ignore_missing_imports = true
